# simple_blockchain_server

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  web3.postman_collection.json
bc_server/: info_endpoints.py  main.py  models.py  routers.py  settings.py  web3_client.py
tests/: conftest.py  test_endpoints.py
