[tool.poetry]
name = "bc_server"
version = "0.1.0"
description = ""
authors = ["Ruslan <earlyr@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
web3 = "^5.31.1"
redis = "^4.3.5"
uvicorn = "^0.20.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.2"
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
